--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -99,6 +99,7 @@ basketCoupon = "Gutschein"
 basketGross = "Brutto"
 basketItemAdded = "Der Artikel wurde in den Warenkorb gelegt"
 basketItemNotAdded = "Der Artikel konnte nicht hinzugefügt werden"
+basketItemsRemovedForLanguage = "Es wurden Artikel aus dem Warenkorb entfernt, die nicht in der ausgewählten Sprache verfügbar sind."
 basketCalculateShippingFailed = "Bei der Versandkostenberechnung kam es zu einem Fehler. Bitte benachrichtigen Sie den Betreiber."
 basketNet = "Netto"
 basketOrderNow = "Jetzt bestellen"
