--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -100,6 +100,7 @@ basketCoupon = "Coupon"
 basketGross = "Gross"
 basketItemAdded = "The item was placed in the shopping cart."
 basketItemNotAdded = "The item could not be added."
+basketItemsRemovedForLanguage = "Items that are not available in the selected language have been removed from the shopping cart."
 basketCalculateShippingFailed = "Error while calculating shipping costs. Please contact the provider."
 basketNet = "Net"
 basketOrderNow = "Order now"
