FIX image count in lightbox

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -254,6 +254,7 @@ itemExclusive = "excl."
 itemExternalVariationId = "Variation ID"
 itemFSK = "Released for age :age and older"
 itemId = "Item ID"
+itemImagePreviewCaption = "Image :current of :total"
 itemInclVAT = "Incl. VAT"
 itemExclVAT = "Excl. VAT"
 itemListLastSeen = "Last seen"
