CHANGE Template.properties - add "contactAcceptPrivacyPolicy"

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -113,6 +113,7 @@ basketPerItem = "per item"
 basketRebate = "Discount on value of items"
 basketAdditionalOptions = "Your additional options (price per item)"
 
+contactAcceptPrivacyPolicy = "I hereby confirm that I have read the :policy."
 contactBestRegards = "Best regards"
 contactMail = "Email"
 contactEnterConfirmEmail = "Please enter a valid email address."
