--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -112,6 +112,7 @@ basketPerItem = "pro Artikel"
 basketRebate = "Rabatt auf Warenwert"
 basketAdditionalOptions = "Ihre Zusatzoptionen (Preis pro Artikel)"
 
+contactAcceptPrivacyPolicy = "Hiermit bestätige ich, dass ich die :policy gelesen habe."
 contactBestRegards = "Mit freundlichen Grüßen"
 contactMail = "E-Mail"
 contactEnterConfirmEmail = "Bitte geben Sie eine gültige E-Mail-Adresse an."
