CHANGE Template.properties - add generalRequiredField translation

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -220,7 +220,8 @@ generalSwitzerland = "Schweiz"
 generalThanks = "Vielen Dank!"
 generalYourEmail = "Ihre E-Mail-Adresse"
 generalSendEmailOk = "E-Mail versendet."
-generalBackToLogin="Zurück"
+generalBackToLogin = "Zurück"
+generalRequiredField = "Hierbei handelt es sich um ein Pflichtfeld."
 graduatedPrices = "Staffelpreise"
 
 itemAge = "Altersfreigabe"
