--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -222,7 +222,8 @@ generalSwitzerland = "Switzerland"
 generalThanks = "Thank you!"
 generalYourEmail = "Your email address"
 generalSendEmailOk = "Email sent."
-generalBackToLogin="Back"
+generalBackToLogin = "Back"
+generalRequiredField = "This is a required field."
 graduatedPrices = "graduated prices"
 
 itemAge = "Age rating"
