CHANGE AddToBasket - the add-to-basket button is now disabled (SingleItem) if a not valid attribute combination is selected

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -270,6 +270,7 @@ itemNetWeight = "Netto-Gewicht"
 itemNew = "Neu"
 itemNumber = "Artikelnummer"
 itemPleaseSelect = "Bitte wählen"
+itemPleaseSelectValidVariation = "Bitte wählen Sie eine gültige Variante."
 itemPrice_asc = "Preis ⬆"
 itemPrice_desc = "Preis ⬇"
 itemProducerName_asc = "Hersteller A-Z"
