--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -272,6 +272,7 @@ itemNetWeight = "Net weight"
 itemNew = "New"
 itemNumber = "Item number"
 itemPleaseSelect = "Please select"
+itemPleaseSelectValidVariation = "Please select a valid variation."
 itemPrice_asc = "Price ⬆"
 itemPrice_desc = "Price ⬇"
 itemProducerName_asc = "Manufacturer A-Z"
