CHANGE Template.properties - add "generalIncludeAbbr"

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -220,6 +220,8 @@ generalThanks = "Vielen Dank!"
 generalYourEmail = "Ihre E-Mail-Adresse"
 generalSendEmailOk = "E-Mail versendet."
 generalBackToLogin="Zurück"
+generalIncludeAbbr = "inkl."
+
 graduatedPrices = "Staffelpreise"
 
 itemAge = "Altersfreigabe"
