--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -222,6 +222,8 @@ generalThanks = "Thank you!"
 generalYourEmail = "Your email address"
 generalSendEmailOk = "Email sent."
 generalBackToLogin="Back"
+generalIncludeAbbr = "incl."
+
 graduatedPrices = "graduated prices"
 
 itemAge = "Age rating"
