--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -1,3 +1,7 @@
+itemFrom = "ab "
+itemTo = "bis "
+itemApply = "Übernehmen"
+
 accAccountSettings = "Kontoeinstellungen"
 accAlreadyLoggedIn = "Sie sind bereits eingeloggt."
 accBankDetails = "Bankdaten"
