--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -1,3 +1,7 @@
+itemFrom = "from "
+itemTo = "to "
+itemApply = "Apply"
+
 accAccountSettings = "Account settings"
 accAlreadyLoggedIn = "You are already logged in."
 accBankDetails = "Bank details"
