UPDATE sorting for de properties FIX coupon propertie keys

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -165,11 +165,11 @@ couponRedeemFailure = "The coupon could not be redeemed."
 couponRedeemSuccess = "The coupon has been redeemed successfully."
 couponRemoveFailure = "The coupon could not be removed."
 couponRemoveSuccess = "The coupon has been removed successfully."
-couponminOrderValueNotReached = "The coupon code has been removed since the required value of goods has not been reached. Please insert the code again when the required value of goods is reached."
+couponMinOrderValueNotReached = "The coupon code has been removed since the required value of goods has not been reached. Please insert the code again when the required value of goods is reached."
 couponnotUsableForSpecialOffer = "The coupon could not be redeemed. Coupons cannot be used for bargain offers."
-couponalreadyUsedOrInvalidCouponCode = "The coupon has already been used or is invalid."
-couponcampaignExpired = "Unfortunately, the coupon has expired."
-couponnoMatchingItemInBasket = "The coupon code has been removed since no item in the shopping cart has been activated for this coupon."
+couponAlreadyUsedOrInvalidCouponCode = "The coupon has already been used or is invalid."
+couponCampaignExpired = "Unfortunately, the coupon has expired."
+couponNoMatchingItemInBasket = "The coupon code has been removed since no item in the shopping cart has been activated for this coupon."
 couponOnlySubscription = "The coupon can only be redeemed for subscription items."
 couponOnlySingleUsage = "The coupon cannot be redeemed for subscription items."
 couponNoOpenAmount = "The coupon has already been redeemed completely."
