--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -1,4 +1,4 @@
-# address
+; address
 addressAddAddress = "Neue Adresse"
 addressAdditionalAddress1 = "Adresszusatz 1"
 addressAdditionalAddress2 = "Adresszusatz 2"
@@ -34,8 +34,8 @@ addressTelephone = "Telefon"
 addressTitle = "Titel"
 addressVatNumber = "USt.-Nr."
 addressZip = "PLZ"
-# address
-# basket
+; address
+; basket
 basket = "Warenkorb"
 basketAdditionalOptions = "Ihre Zusatzoptionen (Preis pro Artikel)"
 basketAvailability = "Verfügbarkeit"
@@ -59,17 +59,17 @@ basketSum = "Summe"
 basketTotalSum = "Gesamtsumme"
 basketValue = "Warenwert"
 basketVAT = "MwSt."
-# basket
-# cancellationForm
+; basket
+; cancellationForm
 cancellationForm = "Widerrufs&shy;formular"
 cancellationFormNoShy = "Widerrufsformular"
 cancellationFormPrint = "Drucken"
-# cancellationForm
-# cancellationRights
+; cancellationForm
+; cancellationRights
 cancellationRightsNoShy = "Widerrufsrecht"
 cancellationRights = "Widerrufs&shy;recht"
-# cancellationRights
-# checkout
+; cancellationRights
+; checkout
 checkout = "Kasse"
 checkoutBasket = "Warenkorb"
 checkoutBuyNow = "Kaufen"
@@ -95,8 +95,8 @@ checkoutShippingProfilePriceChanged="Die Versandkosten haben sich geändert."
 checkoutSum = "Summe"
 checkoutTotalSum = "Gesamtsumme"
 checkoutValue = "Warenwert"
-# checkout
-# contact
+; checkout
+; contact
 contact = "Kontakt"
 contactAcceptPrivacyPolicy = "Hiermit bestätige ich, dass ich die :policy gelesen habe."
 contactCheckEntries = "Bitte Eingaben prüfen."
@@ -119,8 +119,8 @@ contactSendSuccess = "Deine Anfrage wurde erfolgreich gesendet."
 contactShopMessage = "Sie haben eine Frage oder ein Anliegen? Dann nehmen Sie mit uns Kontakt auf. Füllen Sie einfach das Formular aus und wir werden Ihre Anfrage schnellstmöglich bearbeiten."
 contactSubject = "Betreff"
 contactVatNumber="Umsatzsteuer-ID"
-# contact
-# coupon
+; contact
+; coupon
 couponAlreadyUsedOrInvalidCouponCode = "Der Gutschein wurde bereits verwendet oder ist ungültig."
 couponCampaignExpired = "Der Gutschein ist leider abgelaufen."
 couponCampaignNoWebstoreActivated = "Der Gutschein konnte nicht eingelöst werden. Kein Mandant aktiviert."
@@ -148,8 +148,8 @@ couponRemoveFailure = "Der Gutschein konnte nicht entfernt werden."
 couponRemoveSuccess = "Der Gutschein wurde erfolgreich entfernt."
 couponWrongCustomerGroup = "Der Gutschein kann nur von Kunden mit einer anderen Kundenklasse eingelöst werden."
 couponWrongCustomerType = "Der Gutschein kann nur von Kunden mit einem anderen Kundentyp eingelöst werden."
-# coupon
-# dev
+; coupon
+; dev
 devDateFormat = "d.m.Y"
 devDateTimeFormat = "d.m.Y, H:i"
 devDateTimeFormatMoment = "DD.MM.YYYY, HH:mm"
@@ -157,8 +157,8 @@ devVueErrorLink = "Zum Forum"
 devVueErrorLinkURL = "https://forum.plentymarkets.com/t/technologie-update-in-ceres-vue2-und-vuex/77116"
 devVueErrorMessage = "Prüfen Sie bitte, ob Ihre aktiven Plugins mit Ceres 2 kompatibel sind.<br />Weitere Informationen zum Update auf Ceres 2 finden Sie im plentymarkets Forum."
 devVueErrorTitle = "Vue.js konnte nicht initialisiert werden."
-# dev
-# footer
+; dev
+; footer
 footerAllRightsReserved = "Alle Rechte vorbehalten."
 footerCancellationForm = "Widerrufs&shy;formular"
 footerCancellationRight = "Widerrufs&shy;recht"
@@ -169,20 +169,20 @@ footerLegalDisclosure = "Impressum"
 footerOrderShippedBy = "Wir verschicken mit"
 footerPaymentMethods = "Zahlungsarten"
 footerPrivacyPolicy = "Daten&shy;schutz&shy;erklärung"
-# footer
-# header
+; footer
+; header
 headerCountry = "Land"
 headerCurrency = "Währung"
 headerSelectLanguage = "Sprache"
 headerSelectShippingCountry = "Lieferland"
 headerState = "Bundesland"
-# header
-# homepage
+; header
+; homepage
 homepageBack = "Zurück"
 homepageNext = "Nächste"
 homepageShowAll = "Alle ansehen"
-# homepage
-# item
+; homepage
+; item
 itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
 itemAvailabilityAverageDays_desc = "Verfügbarkeit ⬇"
 itemCategories = "Kategorien"
@@ -210,14 +210,14 @@ itemVariationCustomNumber_asc = "Variantennummer ⬆"
 itemVariationCustomNumber_desc = "Variantennummer ⬇"
 itemVariationLastUpdateTimestamp_asc = "Letzte Aktualisierung"
 itemVariationLastUpdateTimestamp_desc = "Erste Aktualisierung"
-# item
-# itemSearch
+; item
+; itemSearch
 itemSearchResults = "Suchergebnisse für:"
-# itemSearch
-# legalDisclosure
+; itemSearch
+; legalDisclosure
 legalDisclosure = "Impressum"
-# legalDisclosure
-# login
+; legalDisclosure
+; login
 login = "Anmelden"
 loginBackToLogin = "Zurück"
 loginEmail = "E-Mail"
@@ -237,8 +237,8 @@ loginResetPwDErrorOnSendEmail = "Die E-Mail konnte nicht gesendet werden."
 loginSend = "Senden"
 loginSendEmailOk = "E-Mail versendet."
 loginSuccessful = "Sie wurden erfolgreich eingeloggt."
-# login
-# myAccount
+; login
+; myAccount
 myAccount = "Mein Konto"
 myAccountAll = "alle"
 myAccountBank="Kreditinstitut"
@@ -277,20 +277,20 @@ myAccountRepeatPassword = "Passwort wiederholen"
 myAccountSave = "Speichern"
 myAccountSettings = "Kontoeinstellungen"
 myAccountShippingAddresses = "Lieferadressen"
-# myAccount
-# notFound
+; myAccount
+; notFound
 notFoundHomepage = "Startseite"
 notFoundOops = "Ups, ein Fehler!"
 notFoundPage = "Die Seite, die du aufgerufen hast, wurde nicht gefunden."
-# notFound
-# notifications
+; notFound
+; notifications
 notificationsCalculateShippingFailed = "Bei der Versandkostenberechnung kam es zu einem Fehler. Bitte benachrichtigen Sie den Betreiber."
 notificationsCheckPassword="Die Passwörter stimmen nicht überein."
 notificationsInvalidResetPasswordUrl="Die angegebene URL ist ungültig oder abgelaufen."
 notificationsItemNotAdded = "Der Artikel konnte nicht hinzugefügt werden"
 notificationsNotEnoughStockItem = "Für die gewählte Artikelmenge ist nicht genügend Bestand verfügbar."
-# notifications
-# orderConfirmation
+; notifications
+; orderConfirmation
 orderConfirmation = "Bestellbestätigung"
 orderConfirmationDate = "Auftragsdatum"
 orderConfirmationEstimatedShippingDate = "Voraussichtl. Versanddatum"
@@ -311,8 +311,8 @@ orderConfirmationThanks = "Vielen Dank!"
 orderConfirmationTotal = "Gesamt"
 orderConfirmationVAT = "MwSt."
 orderConfirmationWillBeProcessed = "Ihre Bestellung wird bearbeitet. Hier finden Sie eine Zusammenfassung:"
-# orderConfirmation
-# orderHistory
+; orderConfirmation
+; orderHistory
 orderHistory = "Auftragshistorie"
 orderHistoryCancel = "Abbrechen"
 orderHistoryChange = "Ändern"
@@ -333,12 +333,12 @@ orderHistoryReturnSendBack = "Artikel zurücksenden"
 orderHistoryShow = "Zeige :countStart - :countEnd von :orderMaxCount Aufträgen"
 orderHistoryStatus = "Status"
 orderHistoryTime = "Uhr"
-# orderHistory
-# privacyPolicy
+; orderHistory
+; privacyPolicy
 privacyPolicy = "Daten&shy;schutz&shy;erklärung"
 privacyPolicyNoShy = "Datenschutzerklärung"
-# privacyPolicy
-# reg
+; privacyPolicy
+; reg
 regContactInformations = "Hinweise zur Registrierung"
 regContactInfoText1 = "Wir bieten Ihnen die Speicherung Ihrer persönlichen Daten in einem passwortgeschützten Kundenkonto an, sodass Sie bei Ihrem nächsten Einkauf nicht erneut Ihren Namen und Ihre Anschrift eingeben müssen."
 regContactInfoText2 = "Durch die Registrierung werden Ihre Adressdaten gespeichert."
@@ -356,8 +356,8 @@ regRegister = "Registrieren"
 regRegisterAccount = "Registrieren Sie sich"
 regRepeatPassword = "Passwort wiederholen"
 regSuccessful = "Sie wurden erfolgreich registriert."
-# reg
-# resetPw
+; reg
+; resetPw
 resetPwChangePasswordFailed = "Das Passwort konnte nicht geändert werden."
 resetPwChangePasswordSuccessful = "Das Passwort wurde erfolgreich geändert."
 resetPwCheckPassword="Die Passwörter stimmen nicht überein."
@@ -373,8 +373,8 @@ resetPwRepeatNewPassword = "Bitte geben Sie Ihr Passwort erneut ein."
 resetPwRepeatPassword = "Passwort wiederholen"
 resetPwResetPassword="Passwort zurücksetzen"
 resetPwSave = "Speichern"
-# resetPw
-# return
+; resetPw
+; return
 return = "Retoure"
 returnCancel = "Abbrechen"
 returnCenter = "Retouren-Center"
@@ -383,15 +383,15 @@ returnReason = "Bitte nennen Sie einen Grund für Ihre Rücksendung (optional)"
 returnSelectAll = "Alle auswählen"
 returnSendBack = "Artikel zurücksenden"
 returnTrigger = "Retoure auslösen"
-# return
-# returnConfirmation
+; return
+; returnConfirmation
 returnConfirmationHomepage = "Startseite"
 returnConfirmationInfo = "Wir haben Ihre Retoure erfasst. Wir informieren Sie über den weiteren Ablauf."
 returnConfirmationMyAccount = "Mein Konto"
 returnConfirmationThanks = "Vielen Dank!"
 returnConfirmationTitle = "Retoure erfasst"
-# returnConfirmation
-# returnHistory
+; returnConfirmation
+; returnHistory
 returnHistory = "Retourenhistorie"
 returnHistoryDate = "Retourendatum"
 returnHistoryOops = "Ups, ein Fehler!"
@@ -404,11 +404,11 @@ returnHistoryReturnShowMore = "Mehr anzeigen"
 returnHistoryShow = "Zeige :countStart - :countEnd von :orderMaxCount Aufträgen"
 returnHistoryStatus = "Status"
 returnHistoryTime = "Uhr"
-# returnHistory
-# shippingInfo
+; returnHistory
+; shippingInfo
 shippingInfoCosts = "Versandkosten"
-# shippingInfo
-# singleItem
+; shippingInfo
+; singleItem
 singleItemAdded = "Der Artikel wurde in den Warenkorb gelegt"
 singleItemAddToBasket = "In den Warenkorb"
 singleItemAge = "Altersfreigabe"
@@ -449,151 +449,151 @@ singleItemWishListAdd = "Zur Wunschliste hinzufügen"
 singleItemWishListAdded = "Der Artikel wurde der Wunschliste hinzugefügt."
 singleItemWishListRemove = "Von Wunschliste entfernen"
 singleItemWishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
-# singleItem
-# termsAndConditions
+; singleItem
+; termsAndConditions
 termsAndConditions = "AGB"
-# termsAndConditions
-# wishList
+; termsAndConditions
+; wishList
 wishList = "Wunschliste"
 wishListNoItems = "Sie haben noch keine Artikel in der Wunschliste."
 wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
-# wishList
+; wishList
 
-# // lang (unused?/delete?)
-# bg = "Bulgarisch"
-# cn = "Chinesisch"
-# cz = "Tschechisch"
-# da = "Dänisch"
-# de = "Deutsch"
-# en = "Englisch"
-# es = "Spanisch"
-# fr = "Französisch"
-# it = "Italienisch"
-# nl = "Niederländisch"
-# nn = "Norwegisch"
-# pl = "Polnisch"
-# pt = "Portugiesisch"
-# ro = "Rumänisch"
-# ru = "Russisch"
-# se = "Schwedisch"
-# sk = "Slowakisch"
-# tr = "Türkisch"
-# vn = "Vietnamesisch"
-# // lang
+; // lang (unused?/delete?)
+; bg = "Bulgarisch"
+; cn = "Chinesisch"
+; cz = "Tschechisch"
+; da = "Dänisch"
+; de = "Deutsch"
+; en = "Englisch"
+; es = "Spanisch"
+; fr = "Französisch"
+; it = "Italienisch"
+; nl = "Niederländisch"
+; nn = "Norwegisch"
+; pl = "Polnisch"
+; pt = "Portugiesisch"
+; ro = "Rumänisch"
+; ru = "Russisch"
+; se = "Schwedisch"
+; sk = "Slowakisch"
+; tr = "Türkisch"
+; vn = "Vietnamesisch"
+; // lang
 
-# // unused (?)
-#     //order
-#     orderTo = "Bis"
-#     orderWeShip = "Wir versenden mit"
-#     orderStatusHistory = "Statushistorie"
-#     orderSelectTimePeriod = "Zeitraum wählen"
-#     orderRecipient = "Empfänger"
-#     orderLast30Days = "letzte 30 Tage"
-#     orderLast3Month = "letzte 3 Monate"
-#     orderLast6Month = "letzte 6 Monate"
-#     orderItemsBought = "Gekaufte Artikel"
-#     orderItemId = "Art.-ID"
-#     orderFrom = "Von"
-#     orderEnterOrderId = "Auftrags-ID eingeben"
-#     orderDhlPackage = "DHL Paket"
-#     orderApply = "Anwenden"
+; // unused (?)
+;     //order
+;     orderTo = "Bis"
+;     orderWeShip = "Wir versenden mit"
+;     orderStatusHistory = "Statushistorie"
+;     orderSelectTimePeriod = "Zeitraum wählen"
+;     orderRecipient = "Empfänger"
+;     orderLast30Days = "letzte 30 Tage"
+;     orderLast3Month = "letzte 3 Monate"
+;     orderLast6Month = "letzte 6 Monate"
+;     orderItemsBought = "Gekaufte Artikel"
+;     orderItemId = "Art.-ID"
+;     orderFrom = "Von"
+;     orderEnterOrderId = "Auftrags-ID eingeben"
+;     orderDhlPackage = "DHL Paket"
+;     orderApply = "Anwenden"
 
-#     // basket
-#     itemPleaseSelect = "Bitte wählen"
+;     // basket
+;     itemPleaseSelect = "Bitte wählen"
 
-#     // account
-#     accUsername = "Benutzername"
-#     accRememberPassword = "Passwort merken"
-#     accPleaseLogin = "Bitte einloggen"
-#     accLogoutSuccessful = "Sie wurden erfolgreich ausgeloggt."
-#     accAlreadyLoggedIn = "Sie sind bereits eingeloggt."
+;     // account
+;     accUsername = "Benutzername"
+;     accRememberPassword = "Passwort merken"
+;     accPleaseLogin = "Bitte einloggen"
+;     accLogoutSuccessful = "Sie wurden erfolgreich ausgeloggt."
+;     accAlreadyLoggedIn = "Sie sind bereits eingeloggt."
 
-#     // payment
-#     paymentStatus_fullyPaid = "Bezahlt"
-#     paymentStatus_overpaid = "Überzahlt"
-#     paymentStatus_partlyPaid = "Teilweise bezahlt"
-#     paymentStatus_prepaid = "Im Voraus bezahlt"
-#     paymentStatus_unpaid = "Nicht bezahlt"
+;     // payment
+;     paymentStatus_fullyPaid = "Bezahlt"
+;     paymentStatus_overpaid = "Überzahlt"
+;     paymentStatus_partlyPaid = "Teilweise bezahlt"
+;     paymentStatus_prepaid = "Im Voraus bezahlt"
+;     paymentStatus_unpaid = "Nicht bezahlt"
 
-#     // general
-#     generalYourEmail = "Ihre E-Mail-Adresse"
-#     generalSwitzerland = "Schweiz"
-#     generalSearch = "Suchen.."
-#     generalSearchNoDot = "Suchen"
-#     generalNewsletter = "Newsletter"
-#     generalLastName = "Nachname"
-#     generalItaly = "Italien"
-#     generalFrance = "Frankreich"
-#     generalGerman = "Deutsch"
-#     generalGermany = "Deutschland"
-#     generalEnterEmail = "E-Mail-Adresse eingeben"
-#     generalFirstName = "Vorname"
-#     generalEngland = "England"
-#     generalEnglish = "Englisch"
-#     generalCountrySettings = "Ländereinstellungen"
-#     generalAustria = "Österreich"
-#     generalBigAll = "Alle"
-#     generalAdd = "Anlegen"
+;     // general
+;     generalYourEmail = "Ihre E-Mail-Adresse"
+;     generalSwitzerland = "Schweiz"
+;     generalSearch = "Suchen.."
+;     generalSearchNoDot = "Suchen"
+;     generalNewsletter = "Newsletter"
+;     generalLastName = "Nachname"
+;     generalItaly = "Italien"
+;     generalFrance = "Frankreich"
+;     generalGerman = "Deutsch"
+;     generalGermany = "Deutschland"
+;     generalEnterEmail = "E-Mail-Adresse eingeben"
+;     generalFirstName = "Vorname"
+;     generalEngland = "England"
+;     generalEnglish = "Englisch"
+;     generalCountrySettings = "Ländereinstellungen"
+;     generalAustria = "Österreich"
+;     generalBigAll = "Alle"
+;     generalAdd = "Anlegen"
 
-#     // basket
-#     basketOrderNow = "Jetzt bestellen"
-#     basketPerItem = "pro Artikel"
+;     // basket
+;     basketOrderNow = "Jetzt bestellen"
+;     basketPerItem = "pro Artikel"
     
-#     // checkout
-#     orderPayEasy = "Zahlen Sie bequem per"
-#     orderPaymentEntry = "Zahlungseingang"
-#     orderPaypalPlus = "PayPal PLUS"
+;     // checkout
+;     orderPayEasy = "Zahlen Sie bequem per"
+;     orderPaymentEntry = "Zahlungseingang"
+;     orderPaypalPlus = "PayPal PLUS"
 
-#     // contact
-#     contactBestRegards = "Mit freundlichen Grüßen"
+;     // contact
+;     contactBestRegards = "Mit freundlichen Grüßen"
 
-#     // singleItem
-#     itemCategoryTopItems = "Top-Artikel"
-#     itemEach = "Stück"
-#     itemListXSimilar = "Ähnlich"
-#     itemListXAccessory = "Zubehör"
-#     itemListXReplacementPart = "Ersatzteil"
-#     itemListXCollection = "Artikelpaket"
-#     itemNew = "Neu"
-#     itemRand = "Zufällige Artikel"
-#     itemState = "Status"
+;     // singleItem
+;     itemCategoryTopItems = "Top-Artikel"
+;     itemEach = "Stück"
+;     itemListXSimilar = "Ähnlich"
+;     itemListXAccessory = "Zubehör"
+;     itemListXReplacementPart = "Ersatzteil"
+;     itemListXCollection = "Artikelpaket"
+;     itemNew = "Neu"
+;     itemRand = "Zufällige Artikel"
+;     itemState = "Status"
     
-#     // item
-#     itemCategoryItemAsc = "Positionsnummer ⬆"
-#     itemCategoryItemDesc = "Positionsnummer ⬇"
-#     itemCategoryNameAsc = "Name A-Z"
-#     itemCategoryNameDesc = "Name Z-A"
-#     itemCategoryPriceAsc = "Preis ⬆"
-#     itemCategoryPriceDesc = "Preis ⬇"
-#     itemCategoryReleaseAsc = "Erscheinungsdatum ⬆"
-#     itemCategoryReleaseDesc = "Erscheinungsdatum ⬇"
-#     itemCategoryStoreSpecialAsc = "Shop-Aktion ⬆"
-#     itemCategoryStoreSpecialDesc = "Shop-Aktion ⬇"
-#     itemCategoryRandom = "Zufällige Sortierung"
-#     itemCategorySort = "Sortieren"
-#     itemCategoryItemsPerPage = "Artikel pro Seite"
-#     itemCategoryNext = "Nächste"
-#     itemCategoryPrevious = "Vorherige"
-#     variationName_asc = "Variantenname A-Z"
-#     variationName_desc = "Variantenname Z-A"
+;     // item
+;     itemCategoryItemAsc = "Positionsnummer ⬆"
+;     itemCategoryItemDesc = "Positionsnummer ⬇"
+;     itemCategoryNameAsc = "Name A-Z"
+;     itemCategoryNameDesc = "Name Z-A"
+;     itemCategoryPriceAsc = "Preis ⬆"
+;     itemCategoryPriceDesc = "Preis ⬇"
+;     itemCategoryReleaseAsc = "Erscheinungsdatum ⬆"
+;     itemCategoryReleaseDesc = "Erscheinungsdatum ⬇"
+;     itemCategoryStoreSpecialAsc = "Shop-Aktion ⬆"
+;     itemCategoryStoreSpecialDesc = "Shop-Aktion ⬇"
+;     itemCategoryRandom = "Zufällige Sortierung"
+;     itemCategorySort = "Sortieren"
+;     itemCategoryItemsPerPage = "Artikel pro Seite"
+;     itemCategoryNext = "Nächste"
+;     itemCategoryPrevious = "Vorherige"
+;     variationName_asc = "Variantenname A-Z"
+;     variationName_desc = "Variantenname Z-A"
 
-#     // address
-#     addressChangeAddress = "Adresse ändern"
-#     addressContact = "Kontakt"
-#     addressDeleteAddress = "Adresse löschen"
-#     addressDeleteWarning = "Adresse wirklich löschen?"
-#     addressGBAdditionalLocality = "Adresszusatz"
-#     addressGBBuildingName = "Gebäude Name"
+;     // address
+;     addressChangeAddress = "Adresse ändern"
+;     addressContact = "Kontakt"
+;     addressDeleteAddress = "Adresse löschen"
+;     addressDeleteWarning = "Adresse wirklich löschen?"
+;     addressGBAdditionalLocality = "Adresszusatz"
+;     addressGBBuildingName = "Gebäude Name"
 
-#     // return
-#     myAccountReturnSuccess = "Die Retoure wurde erfolgreich ausgelöst. Bitte senden Sie die Artikel an uns zurück."
+;     // return
+;     myAccountReturnSuccess = "Die Retoure wurde erfolgreich ausgelöst. Bitte senden Sie die Artikel an uns zurück."
 
-#     // footer
-#     orderShipped = "Versand"
+;     // footer
+;     orderShipped = "Versand"
 
-#     // dev
-#     dateFormatMoment = "DD.MM.YYYY"
-#     timeFormat = "H:i"
-#     timeFormatMoment = "HH:mm"
+;     // dev
+;     dateFormatMoment = "DD.MM.YYYY"
+;     timeFormat = "H:i"
+;     timeFormatMoment = "HH:mm"
 
-# // unused
+; // unused
