UPDATE cleanup en/template.properties; REMOVE unused properties from en/template.properties

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -151,8 +151,11 @@ couponWrongCustomerType = "Der Gutschein kann nur von Kunden mit einem anderen K
 ; coupon - Gutschein
 ; dev - Entwickler
 devDateFormat = "d.m.Y"
+devDateFormatMoment = "DD.MM.YYYY"
 devDateTimeFormat = "d.m.Y, H:i"
 devDateTimeFormatMoment = "DD.MM.YYYY, HH:mm"
+devTimeFormat = "H:i"
+devTimeFormatMoment = "HH:mm"
 devVueErrorLink = "Zum Forum"
 devVueErrorLinkURL = "https://forum.plentymarkets.com/t/technologie-update-in-ceres-vue2-und-vuex/77116"
 devVueErrorMessage = "Prüfen Sie bitte, ob Ihre aktiven Plugins mit Ceres 2 kompatibel sind.<br />Weitere Informationen zum Update auf Ceres 2 finden Sie im plentymarkets Forum."
@@ -484,20 +487,20 @@ wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 
 ; // unused (?)
 ;     //order
-;     orderTo = "Bis"
-;     orderWeShip = "Wir versenden mit"
-;     orderStatusHistory = "Statushistorie"
-;     orderSelectTimePeriod = "Zeitraum wählen"
-;     orderRecipient = "Empfänger"
+;     orderApply = "Anwenden"
+;     orderDhlPackage = "DHL Paket"
+;     orderEnterOrderId = "Auftrags-ID eingeben"
+;     orderFrom = "Von"
+;     orderItemId = "Art.-ID"
+;     orderItemsBought = "Gekaufte Artikel"
 ;     orderLast30Days = "letzte 30 Tage"
 ;     orderLast3Month = "letzte 3 Monate"
 ;     orderLast6Month = "letzte 6 Monate"
-;     orderItemsBought = "Gekaufte Artikel"
-;     orderItemId = "Art.-ID"
-;     orderFrom = "Von"
-;     orderEnterOrderId = "Auftrags-ID eingeben"
-;     orderDhlPackage = "DHL Paket"
-;     orderApply = "Anwenden"
+;     orderRecipient = "Empfänger"
+;     orderSelectTimePeriod = "Zeitraum wählen"
+;     orderStatusHistory = "Statushistorie"
+;     orderTo = "Bis"
+;     orderWeShip = "Wir versenden mit"
 
 ;     // basket
 ;     itemPleaseSelect = "Bitte wählen"
@@ -517,24 +520,24 @@ wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ;     paymentStatus_unpaid = "Nicht bezahlt"
 
 ;     // general
-;     generalYourEmail = "Ihre E-Mail-Adresse"
-;     generalSwitzerland = "Schweiz"
-;     generalSearch = "Suchen.."
-;     generalSearchNoDot = "Suchen"
-;     generalNewsletter = "Newsletter"
-;     generalLastName = "Nachname"
-;     generalItaly = "Italien"
+;     generalAdd = "Anlegen"
+;     generalAustria = "Österreich"
+;     generalBigAll = "Alle"
+;     generalCountrySettings = "Ländereinstellungen"
+;     generalEngland = "England"
+;     generalEnglish = "Englisch"
+;     generalEnterEmail = "E-Mail-Adresse eingeben"
+;     generalFirstName = "Vorname"
 ;     generalFrance = "Frankreich"
 ;     generalGerman = "Deutsch"
 ;     generalGermany = "Deutschland"
-;     generalEnterEmail = "E-Mail-Adresse eingeben"
-;     generalFirstName = "Vorname"
-;     generalEngland = "England"
-;     generalEnglish = "Englisch"
-;     generalCountrySettings = "Ländereinstellungen"
-;     generalAustria = "Österreich"
-;     generalBigAll = "Alle"
-;     generalAdd = "Anlegen"
+;     generalItaly = "Italien"
+;     generalLastName = "Nachname"
+;     generalNewsletter = "Newsletter"
+;     generalSearch = "Suchen.."
+;     generalSearchNoDot = "Suchen"
+;     generalSwitzerland = "Schweiz"
+;     generalYourEmail = "Ihre E-Mail-Adresse"
 
 ;     // basket
 ;     basketOrderNow = "Jetzt bestellen"
@@ -551,10 +554,10 @@ wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ;     // singleItem
 ;     itemCategoryTopItems = "Top-Artikel"
 ;     itemEach = "Stück"
-;     itemListXSimilar = "Ähnlich"
 ;     itemListXAccessory = "Zubehör"
-;     itemListXReplacementPart = "Ersatzteil"
 ;     itemListXCollection = "Artikelpaket"
+;     itemListXReplacementPart = "Ersatzteil"
+;     itemListXSimilar = "Ähnlich"
 ;     itemNew = "Neu"
 ;     itemRand = "Zufällige Artikel"
 ;     itemState = "Status"
@@ -562,19 +565,19 @@ wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ;     // item
 ;     itemCategoryItemAsc = "Positionsnummer ⬆"
 ;     itemCategoryItemDesc = "Positionsnummer ⬇"
+;     itemCategoryItemsPerPage = "Artikel pro Seite"
 ;     itemCategoryNameAsc = "Name A-Z"
 ;     itemCategoryNameDesc = "Name Z-A"
-;     itemCategoryPriceAsc = "Preis ⬆"
-;     itemCategoryPriceDesc = "Preis ⬇"
-;     itemCategoryReleaseAsc = "Erscheinungsdatum ⬆"
-;     itemCategoryReleaseDesc = "Erscheinungsdatum ⬇"
-;     itemCategoryStoreSpecialAsc = "Shop-Aktion ⬆"
-;     itemCategoryStoreSpecialDesc = "Shop-Aktion ⬇"
-;     itemCategoryRandom = "Zufällige Sortierung"
-;     itemCategorySort = "Sortieren"
-;     itemCategoryItemsPerPage = "Artikel pro Seite"
 ;     itemCategoryNext = "Nächste"
 ;     itemCategoryPrevious = "Vorherige"
+;     itemCategoryPriceAsc = "Preis ⬆"
+;     itemCategoryPriceDesc = "Preis ⬇"
+;     itemCategoryRandom = "Zufällige Sortierung"
+;     itemCategoryReleaseAsc = "Erscheinungsdatum ⬆"
+;     itemCategoryReleaseDesc = "Erscheinungsdatum ⬇"
+;     itemCategorySort = "Sortieren"
+;     itemCategoryStoreSpecialAsc = "Shop-Aktion ⬆"
+;     itemCategoryStoreSpecialDesc = "Shop-Aktion ⬇"
 ;     variationName_asc = "Variantenname A-Z"
 ;     variationName_desc = "Variantenname Z-A"
 
@@ -591,10 +594,5 @@ wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 
 ;     // footer
 ;     orderShipped = "Versand"
-
-;     // dev
-;     dateFormatMoment = "DD.MM.YYYY"
-;     timeFormat = "H:i"
-;     timeFormatMoment = "HH:mm"
 
 ; // unused
