ADD lang properties

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -174,11 +174,30 @@ footerPaymentMethods = "Payment methods"
 footerPrivacyPolicy = "Privacy&shy; policy"
 ; footer - Footer
 ; header - Header
+headerBg = "Bulgarian"
+headerCn = "Chinese"
 headerCountry = "Country"
 headerCurrency = "Currency"
+headerCz = "Czech"
+headerDa = "Danish"
+headerDe = "German"
+headerEn = "English"
+headerEs = "Spanish"
+headerFr = "French"
+headerIt = "Italian"
+headerNl = "Dutch"
+headerNn = "Norwegian"
+headerPl = "Polish"
+headerPt = "Portuguese"
+headerRo = "Romanian"
+headerRu = "Russian"
+headerSe = "Swedish"
 headerSelectLanguage = "Language"
 headerSelectShippingCountry = "Country of delivery"
+headerSk = "Slovak"
 headerState = "State/Province"
+headerTr = "Turkish"
+headerVn = "Vietnamese"
 ; header - Header
 ; homepage - Startseite
 homepageBack = "Back"
@@ -480,15 +499,7 @@ wishListRemoved = "The item was removed from your wish list."
 ; addressGBBuildingName = "Building name"
 ; basketOrderNow = "Order now"
 ; basketPerItem = "per item"
-; bg = "Bulgarian"
-; cn = "Chinese"
 ; contactBestRegards = "Best regards"
-; cz = "Czech"
-; da = "Danish"
-; de = "German"
-; en = "English"
-; es = "Spanish"
-; fr = "French"
 ; generalAdd = "Create"
 ; generalAustria = "Austria"
 ; generalBigAll = "All"
@@ -507,7 +518,6 @@ wishListRemoved = "The item was removed from your wish list."
 ; generalSearchNoDot = "Search"
 ; generalSwitzerland = "Switzerland"
 ; generalYourEmail = "Your email address"
-; it = "Italian"
 ; itemCategoryItemAsc = "Position ⬆"
 ; itemCategoryItemDesc = "Position ⬇"
 ; itemCategoryItemsPerPage = "Items per page"
@@ -534,8 +544,6 @@ wishListRemoved = "The item was removed from your wish list."
 ; itemRand = "Random items"
 ; itemState = "State"
 ; myAccountReturnSuccess = "The return has been initiated successfully. Please send the items back to us."
-; nl = "Dutch"
-; nn = "Norwegian"
 ; orderApply = "Apply"
 ; orderDhlPackage = "DHL Paket"
 ; orderEnterOrderId = "Enter order ID"
@@ -559,13 +567,5 @@ wishListRemoved = "The item was removed from your wish list."
 ; paymentStatus_partlyPaid = "Partially paid"
 ; paymentStatus_prepaid = "Prepaid"
 ; paymentStatus_unpaid = "Not paid"
-; pl = "Polish"
-; pt = "Portuguese"
-; ro = "Romanian"
-; ru = "Russian"
-; se = "Swedish"
-; sk = "Slovak"
-; tr = "Turkish"
 ; variationName_asc = "Variation name A-Z"
 ; variationName_desc = "Variation name Z-A"
-; vn = "Vietnamese"
