removed unnecessary config entries and added them to the properties

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -62,10 +62,12 @@ basketVAT = "MwSt."
 ; basket - Warenkorb
 ; cancellationForm - Widerrufsformular
 cancellationForm = "Widerrufs&shy;formular"
+cancellationFormMetaDescription = ""
 cancellationFormNoShy = "Widerrufsformular"
 cancellationFormPrint = "Drucken"
 ; cancellationForm - Widerrufsformular
 ; cancellationRights - Widerrufsbelehrung
+cancellationRightsMetaDescription = "TODO"
 cancellationRightsNoShy = "Widerrufsrecht"
 cancellationRights = "Widerrufs&shy;recht"
 ; cancellationRights - Widerrufsbelehrung
@@ -106,7 +108,9 @@ contactEditSubject = "Bitte geben Sie einen Betreff ein."
 contactEnterConfirmEmail = "Bitte geben Sie eine gültige E-Mail-Adresse an."
 contactMail = "E-Mail"
 contactMessage = "Nachricht"
+contactMetaDescription = "TODO"
 contactName = "Name"
+contactOpeningTimes = "Montag - Freitag, 00:00 - 24:00"
 contactOptional = "optional"
 contactOrderId = "Auftrags-ID"
 contactPrivacyPolicy = "Daten&shy;schutz&shy;erklärung"
@@ -166,12 +170,18 @@ footerAllRightsReserved = "Alle Rechte vorbehalten."
 footerCancellationForm = "Widerrufs&shy;formular"
 footerCancellationRight = "Widerrufs&shy;recht"
 footerCertifiedBy = "Geprüfte Leistung"
+footerColumnTitle1 = "TODO"
+footerColumnTitle2 = "TODO"
+footerColumnTitle3 = "TODO"
 footerContact = "Kontakt"
 footerGtc = "AGB"
 footerLegalDisclosure = "Impressum"
 footerOrderShippedBy = "Wir verschicken mit"
 footerPaymentMethods = "Zahlungsarten"
 footerPrivacyPolicy = "Daten&shy;schutz&shy;erklärung"
+footerStoreFeature1 = "TODO"
+footerStoreFeature2 = "TODO"
+footerStoreFeature3 = "TODO"
 ; footer - Footer
 ; header - Header
 headerCountry = "Land"
@@ -182,6 +192,7 @@ headerState = "Bundesland"
 ; header - Header
 ; homepage - Startseite
 homepageBack = "Zurück"
+homepageMetaDescription = "TODO"
 homepageNext = "Nächste"
 homepageShowAll = "Alle ansehen"
 ; homepage - Startseite
@@ -195,6 +206,9 @@ itemExclusive = "zzgl."
 itemFilter = "Filter"
 itemFrom = "ab "
 itemInclVAT = "inkl. ges. MwSt."
+ItemList1ListName = "Name"
+ItemList2ListName = "Name"
+ItemList3ListName = "Name"
 itemListLastSeen = "Zuletzt angesehen"
 itemName_asc = "Name A-Z"
 itemName_desc = "Name Z-A"
@@ -222,6 +236,7 @@ itemSearchResults = "Suchergebnisse für:"
 ; itemSearch - Artikelsuche
 ; legalDisclosure - legalDisclosure
 legalDisclosure = "Impressum"
+legalDisclosureMetaDescription = "TODO"
 ; legalDisclosure - legalDisclosure
 ; login - Login
 login = "Anmelden"
@@ -342,6 +357,7 @@ orderHistoryTime = "Uhr"
 ; orderHistory - Auftragshistorie
 ; privacyPolicy - Datenschutzerklärung
 privacyPolicy = "Daten&shy;schutz&shy;erklärung"
+privacyPolicyMetaDescription = "TODO"
 privacyPolicyNoShy = "Datenschutzerklärung"
 ; privacyPolicy - Datenschutzerklärung
 ; reg - Registrierung
@@ -458,6 +474,7 @@ singleItemWishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ; singleItem - Artikeleinzelansicht
 ; termsAndConditions - AGB
 termsAndConditions = "AGB"
+termsAndConditionsMetaDescription = "TODO"
 ; termsAndConditions - AGB
 ; wishList - Wunschliste
 wishList = "Wunschliste"
