--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -62,10 +62,12 @@ basketVAT = "VAT"
 ; basket - Warenkorb
 ; cancellationForm - Widerrufsformular
 cancellationForm = "Cancellation&shy; form"
+cancellationFormMetaDescription = "Meta description for cancellation form"
 cancellationFormNoShy = "Cancellation form"
 cancellationFormPrint = "Print"
 ; cancellationForm - Widerrufsformular
 ; cancellationRights - Widerrufsbelehrung
+cancellationRightsMetaDescription = "Meta description for cancellation rights"
 cancellationRights = "Cancellation&shy; rights"
 cancellationRightsNoShy = "Cancellation rights"
 ; cancellationRights - Widerrufsbelehrung
@@ -106,7 +108,9 @@ contactEditSubject = "Please enter a subject."
 contactEnterConfirmEmail = "Please enter a valid email address."
 contactMail = "Email"
 contactMessage = "Message"
+contactMetaDescription = "Meta description for contact page"
 contactName = "Name"
+contactOpeningTimes = "Monday - Friday, 00:00 - 24:00"
 contactOptional = "optional"
 contactOrderId = "Order ID"
 contactPrivacyPolicy = "Privacy&shy; policy"
@@ -166,12 +170,18 @@ footerAllRightsReserved = "All rights reserved."
 footerCancellationForm = "Cancellation&shy; form"
 footerCancellationRight = "Cancellation&shy; rights"
 footerCertifiedBy = "Certified by"
+footerColumnTitle1 = "Shop"
+footerColumnTitle2 = "My account"
+footerColumnTitle3 = "Service"
 footerContact = "Contact"
 footerGtc = "Terms and conditions"
 footerLegalDisclosure = "Legal disclosure"
 footerOrderShippedBy = "Your order is shipped by"
 footerPaymentMethods = "Payment methods"
 footerPrivacyPolicy = "Privacy&shy; policy"
+footerStoreFeature1 = "Delivery period approx. 1 to 3 business days"
+footerStoreFeature2 = "Free shipping & return"
+footerStoreFeature3 = "100-day return policy"
 ; footer - Footer
 ; header - Header
 headerCountry = "Country"
@@ -182,6 +192,7 @@ headerState = "State/Province"
 ; header - Header
 ; homepage - Startseite
 homepageBack = "Back"
+homepageMetaDescription = "Meta description for homepage"
 homepageNext = "Next"
 homepageShowAll = "Show all"
 ; homepage - Startseite
@@ -195,6 +206,9 @@ itemExclusive = "excl."
 itemFilter = "Filter"
 itemFrom = "from "
 itemInclVAT = "Incl. VAT"
+ItemList1ListName = "Name"
+ItemList2ListName = "Name"
+ItemList3ListName = "Name"
 itemListLastSeen = "Last seen"
 itemName_asc = "Name A-Z"
 itemName_desc = "Name Z-A"
@@ -222,6 +236,7 @@ itemSearchResults = "Search results for:"
 ; itemSearch - Artikelsuche
 ; legalDisclosure - legalDisclosure
 legalDisclosure = "Legal disclosure"
+legalDisclosureMetaDescription = "Meta description for legal disclosure"
 ; legalDisclosure - legalDisclosure
 ; login - Login
 login = "Log in"
@@ -342,6 +357,7 @@ orderHistoryTime = ""
 ; orderHistory - Auftragshistorie
 ; privacyPolicy - Datenschutzerklärung
 privacyPolicy = "Privacy&shy; policy"
+privacyPolicyMetaDescription = "Meta description for privacy policy"
 privacyPolicyNoShy = "Privacy policy"
 ; privacyPolicy - Datenschutzerklärung
 ; reg - Registrierung
@@ -458,6 +474,7 @@ singleItemWishListRemoved = "The item was removed from your wish list."
 ; singleItem - Artikeleinzelansicht
 ; termsAndConditions - AGB
 termsAndConditions = "Terms and conditions"
+termsAndConditionsMetaDescription = "Meta description for terms and conditions"
 ; termsAndConditions - AGB
 ; wishList - Wunschliste
 wishList = "Wish list"
