--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -67,7 +67,7 @@ cancellationFormNoShy = "Widerrufsformular"
 cancellationFormPrint = "Drucken"
 ; cancellationForm - Widerrufsformular
 ; cancellationRights - Widerrufsbelehrung
-cancellationRightsMetaDescription = "TODO"
+cancellationRightsMetaDescription = "Meta-Beschreibung für die Widerrufsbelehrung"
 cancellationRightsNoShy = "Widerrufsrecht"
 cancellationRights = "Widerrufs&shy;recht"
 ; cancellationRights - Widerrufsbelehrung
@@ -108,7 +108,7 @@ contactEditSubject = "Bitte geben Sie einen Betreff ein."
 contactEnterConfirmEmail = "Bitte geben Sie eine gültige E-Mail-Adresse an."
 contactMail = "E-Mail"
 contactMessage = "Nachricht"
-contactMetaDescription = "TODO"
+contactMetaDescription = "Meta-Beschreibung für die Kontaktseite"
 contactName = "Name"
 contactOpeningTimes = "Montag - Freitag, 00:00 - 24:00"
 contactOptional = "optional"
@@ -170,18 +170,18 @@ footerAllRightsReserved = "Alle Rechte vorbehalten."
 footerCancellationForm = "Widerrufs&shy;formular"
 footerCancellationRight = "Widerrufs&shy;recht"
 footerCertifiedBy = "Geprüfte Leistung"
-footerColumnTitle1 = "TODO"
-footerColumnTitle2 = "TODO"
-footerColumnTitle3 = "TODO"
+footerColumnTitle1 = "Shop"
+footerColumnTitle2 = "Mein Konto"
+footerColumnTitle3 = "Service"
 footerContact = "Kontakt"
 footerGtc = "AGB"
 footerLegalDisclosure = "Impressum"
 footerOrderShippedBy = "Wir verschicken mit"
 footerPaymentMethods = "Zahlungsarten"
 footerPrivacyPolicy = "Daten&shy;schutz&shy;erklärung"
-footerStoreFeature1 = "TODO"
-footerStoreFeature2 = "TODO"
-footerStoreFeature3 = "TODO"
+footerStoreFeature1 = "Lieferzeit etwa 1 bis 3 Werktage"
+footerStoreFeature2 = "Kostenloser Versand & Rückversand"
+footerStoreFeature3 = "100 Tage Rückgaberecht"
 ; footer - Footer
 ; header - Header
 headerCountry = "Land"
@@ -192,7 +192,7 @@ headerState = "Bundesland"
 ; header - Header
 ; homepage - Startseite
 homepageBack = "Zurück"
-homepageMetaDescription = "TODO"
+homepageMetaDescription = "Meta-Beschreibung für die Startseite"
 homepageNext = "Nächste"
 homepageShowAll = "Alle ansehen"
 ; homepage - Startseite
@@ -236,7 +236,7 @@ itemSearchResults = "Suchergebnisse für:"
 ; itemSearch - Artikelsuche
 ; legalDisclosure - legalDisclosure
 legalDisclosure = "Impressum"
-legalDisclosureMetaDescription = "TODO"
+legalDisclosureMetaDescription = "Meta-Beschreibung für das Impressum"
 ; legalDisclosure - legalDisclosure
 ; login - Login
 login = "Anmelden"
@@ -357,7 +357,7 @@ orderHistoryTime = "Uhr"
 ; orderHistory - Auftragshistorie
 ; privacyPolicy - Datenschutzerklärung
 privacyPolicy = "Daten&shy;schutz&shy;erklärung"
-privacyPolicyMetaDescription = "TODO"
+privacyPolicyMetaDescription = "Meta-Beschreibung für die Datenschutzerklärung"
 privacyPolicyNoShy = "Datenschutzerklärung"
 ; privacyPolicy - Datenschutzerklärung
 ; reg - Registrierung
@@ -474,7 +474,7 @@ singleItemWishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ; singleItem - Artikeleinzelansicht
 ; termsAndConditions - AGB
 termsAndConditions = "AGB"
-termsAndConditionsMetaDescription = "TODO"
+termsAndConditionsMetaDescription = "Meta-Beschreibung für die AGB"
 ; termsAndConditions - AGB
 ; wishList - Wunschliste
 wishList = "Wunschliste"
@@ -562,7 +562,7 @@ wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ;     // basket
 ;     basketOrderNow = "Jetzt bestellen"
 ;     basketPerItem = "pro Artikel"
-    
+
 ;     // checkout
 ;     orderPayEasy = "Zahlen Sie bequem per"
 ;     orderPaymentEntry = "Zahlungseingang"
@@ -581,7 +581,7 @@ wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ;     itemNew = "Neu"
 ;     itemRand = "Zufällige Artikel"
 ;     itemState = "Status"
-    
+
 ;     // item
 ;     itemCategoryItemAsc = "Positionsnummer ⬆"
 ;     itemCategoryItemDesc = "Positionsnummer ⬇"
