--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -62,7 +62,7 @@ basketVAT = "MwSt."
 ; basket - Warenkorb
 ; cancellationForm - Widerrufsformular
 cancellationForm = "Widerrufs&shy;formular"
-cancellationFormMetaDescription = ""
+cancellationFormMetaDescription = "Meta-Beschreibung für das Widerrufsformular"
 cancellationFormNoShy = "Widerrufsformular"
 cancellationFormPrint = "Drucken"
 ; cancellationForm - Widerrufsformular
